# agent-orchastrator-web

./: .agent-context.md  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  TASKS.md  flake.nix  index.html  runtime.config.json
backend/: pyproject.toml
backend/src/agent_orchestrator/: config.py
backend/src/agent_orchestrator/adapters/: __init__.py  base.py  claude_adapter.py  codex_adapter.py  normalize.py  ollama_adapter.py
backend/src/agent_orchestrator/api/: __init__.py  db_provider.py  responses.py  security.py
backend/src/agent_orchestrator/config_loaders/: __init__.py  personalities.py
backend/src/agent_orchestrator/runtime/: __init__.py  (+3 more)
backend/tests/: conftest.py  test_adapter_contracts.py  test_agent_repo.py  test_api_agent_personality.py  test_api_agents.py  test_api_app.py  test_api_artifacts.py  test_api_conversation_agents.py  test_api_conversations.py  test_api_events.py  test_api_health.py  test_api_orchestration.py  test_api_tasks.py  test_artifact_repo.py  test_batch_runner.py  test_capacity.py  test_checkpoint.py  test_claude_adapter.py  test_codex_adapter.py  test_config.py  test_conversation_agent_repo.py  test_conversation_repo.py  test_db_manager.py  test_event_log.py  test_executor.py  test_locks.py  test_merge_queue.py  test_merge_queue_repo.py  test_message_event_repo.py  test_models_enums.py  test_normalize.py  test_notifications.py  test_ollama_adapter.py  test_orchestrator_models.py  test_package_layout.py  test_personalities_loader.py  test_repository_interfaces.py  test_scheduler.py  test_schema.py  test_schema_fk.py  (+7 more)
(+368 files in other folders)
